<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"

        android:src="@drawable/fondo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >

        <ImageView
            android:id="@+id/imgCDMIT"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/unamlogo" />

        <ImageView
            android:id="@+id/imgConectate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_hola"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/conectate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/dispbg"
            android:orientation="horizontal"
            android:padding="10dp">


            <!--RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:id="@+id/layoutNodisp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtNodisp"
                    style="@style/TextMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:drawableStart="@drawable/alerta"
                    android:drawableLeft="@drawable/alerta"
                    android:drawablePadding="20dp"
                    android:text="@string/text_nodisp"
                    android:textSize="14sp"
                    android:visibility="visible"

                    />

                <Button
                    android:id="@+id/btnBuscar"
                    style="@style/TextMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btnbuscar_button"
                    android:text="@string/txt_buscar"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:visibility="visible"

                    />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_logo"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/cdmitmedid" />


</RelativeLayout>